--- a/services/server/package.json
+++ b/services/server/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-	  "watch": "nodemon server.js"
+    "watch": "nodemon server.js"
   },
   "author": "Liran Farage",
   "license": "MIT",
   "dependencies": {
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "mongoose": "^5.2.5",
     "nodemon": "^1.18.3"
   }
 }
